# realtime-data-processing-with-spark

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py
app/core/config/: __init__.py  settings.py
app/events/consumer/: __init__.py
app/events/data/: __init__.py
app/events/producer/: __init__.py
notebooks/: PIPE_INGESTION_STREAM_CUSTOMER.ipynb  PIPE_STREAM_CUSTOMER_ACCURATED.ipynb  PIPE_STREAM_CUSTOMER_BRONZE_SILVER.ipynb
notebooks/~/work/checkpoint/: metadata
notebooks/~/work/checkpoint/finance.broker.transactions.customers/: metadata
notebooks/~/work/checkpoint/finance.broker.transactions.customers/offsets/: 0  1  2  3  4  5  6  7  8  9
notebooks/~/work/checkpoint/offsets/: 0  1  10  11  12  13  14  15  16  17  18  2  3  4  5  6  7  8  9
notebooks/~/work/checkpoint/sources/0/: 0
notebooks/~/work/datalake/bronze/finance.broker.transactions.customers/: .part-00000-04ee9b69-2b3e-457b-8860-22cf43739213-c000.snappy.parquet.crc  .part-00000-20f4199d-10a5-4daf-9aaf-bb90f7c06a24-c000.snappy.parquet.crc  .part-00000-23215635-8e61-4518-8483-23c99a5af833-c000.snappy.parquet.crc  .part-00000-754992d1-5a60-4ed6-87fb-52485233874e-c000.snappy.parquet.crc  .part-00000-8a05e27c-d550-42b2-a5c2-92a0ea038f36-c000.snappy.parquet.crc  .part-00000-94730fe3-671a-405d-9aa3-27e7306852d5-c000.snappy.parquet.crc  .part-00000-c28a6a47-498e-4cf5-b15b-b4919da2dfb1-c000.snappy.parquet.crc  .part-00000-d54b1c37-f7ff-4fce-a2c4-40231e274f47-c000.snappy.parquet.crc  (+12 more)
