[tool.poetry]
name = "realtime-data-processing-with-spark"
version = "0.1.0"
description = "Real time data procressing with spark for Python Nordeste"
authors = ["Natan Nascimento <natanascimentom@outlook.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
produce = "app:produce"
consume = "app:consume"

[tool.poetry.dependencies]
python = "^3.8"
confluent-kafka = "^1.9.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
